infra/k8s/comments.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: abdulrehmanconq/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-service
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      targetPort: 4001
      port: 4001
