infra/k8s/posts.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: abdulrehmanconq/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-ip-service
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      targetPort: 4000
      port: 4000
