infra/k8s/ingress.service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /query
            pathType: Prefix
            backend:
              service:
                name: query-cluster-ip-service
                port:
                  number: 4002
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-ip-service
                port:
                  number: 4000
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments-cluster-ip-service
                port:
                  number: 4001
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-bus-cluster-ip-service
                port:
                  number: 4005
          - path: /moderation
            pathType: Prefix
            backend:
              service:
                name: moderation-cluster-ip-service
                port:
                  number: 4003
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
